--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,13 @@
 - include: redhat.yml
   when: ansible_os_family == "RedHat" or ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
+- name: Ensure services are enabled and started
+  service: "name={{ item }} state=started enabled=yes"
+  with_items:
+    - "{{ apache_svc }}"
+    - "{{ mysql_svc }}"
+    - "{{ rng_svc }}"
+
 - name: check installed pear packages
   command: pear list
   register: pearinstalled
