--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -4,3 +4,60 @@
   roles:
     - MISP
 
+## pre-test configuration
+- hosts: all
+  vars:
+    - user: vagrant
+    - user_home: /home/vagrant
+    - key_file: "{{ user_home }}/build/key.txt"
+    - misp_base_url: http://misp.local
+    - rolesroot: /tmp/kitchen/roles/MISP
+  tasks:
+    - hostname: name=misp.local
+    - name: check tool version for debugging
+      command: "{{ item }}"
+      with_items:
+        - php --version
+        - composer --version
+      changed_when: false
+      ignore_errors: true
+    - pip: name=coveralls
+    - pip: name=codecov
+    - file: dest={{ item }} mode=0755 state=directory
+      with_items:
+        - "{{ user_home }}/build"
+        - "{{ user_home }}"
+        - /home
+   # Get authkey
+    - include: "{{ rolesroot }}/tasks/apache-env.yml"
+    - file: dest=/var/www/MISP/build mode=0777
+    - copy: src=/var/www/MISP/travis/bootstrap.php dest=/var/www/MISP/app/Config/bootstrap.php backup=yes force=yes
+    - name: ensure test user in group of web server
+      user: "user={{ user }} groups={{ www_user }} append=yes"
+      become: yes
+    - name: check if existing key file
+      stat: path={{ key_file }}
+      register: skey
+    - name: cake userInit
+      shell: "/var/www/MISP/app/Console/cake userInit -q | tee {{ key_file }}"
+      become: yes
+#      become_user: "{{ user }}"
+      register: userInit
+      when: not skey.stat.exists
+    - debug: var=userInit
+    - file: dest={{ key_file }} mode=777
+      become: yes
+    - file: dest=/var/www/MISP/tests mode=777 recurse=yes
+      become: yes
+    - file: dest=/var/www/MISP owner={{ www_user }} mode=755 recurse=yes
+      become: yes
+    - command: cat {{ key_file }}
+      register: mispkey
+      changed_when: false
+    - file: dest=/var/www/MISP/PyMISP mode=777 recurse=yes
+      become: yes
+    - lineinfile: dest=/var/www/MISP/PyMISP/test/keys.py line={{ item }}
+      with_items:
+        - "url = \"{{ misp_base_url }}\""
+        - "key = \"{{ misp_key.stdout_lines }}\""
+
