--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_install:
   - find -ls
   - cp /home/travis/build/juju4/ansible-MISP/tasks/travis.yml /home/travis/build/juju4/ansible-MISP/test/integration/default/
   - cp /home/travis/build/juju4/ansible-MISP/tasks/apache-env.yml /home/travis/build/juju4/ansible-MISP/test/integration/default/
+  - cp /home/travis/build/juju4/ansible-MISP/test/integration/default/serverspec/Rakefile /home/travis/build/juju4/ansible-MISP/
   # Customize container
   - 'sudo docker build --rm=true --file=test/travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible test'
 
@@ -33,6 +34,10 @@ script:
   - 'sudo docker run --detach --volume="${PWD}":/etc/ansible/roles/MISP:ro ${run_opts} ${distribution}-${version}:ansible "${init}" > "${container_id}"'
 
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible --version'
+
+## serverspec test
+  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm apt-get install -qq ruby2.0 rake'
+  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm gem2.0 install serverspec rspec'
 
   # Ansible syntax check.
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/MISP/test/integration/default/default.yml --syntax-check'
@@ -48,6 +53,9 @@ script:
 #    | grep -q 'changed=0.*failed=0'
 #    && (echo 'Idempotence test: pass' && exit 0)
 #    || (echo 'Idempotence test: fail' && cat /tmp/idempotency.log && exit 1)
+
+# serverspec
+  - 'sudo docker exec --tty "$(cat ${container_id})" cd /etc/ansible/roles/MISP/ && rake2.0 --trace spec'
 
   # Clean up
   - 'sudo docker stop "$(cat ${container_id})"'
