--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -6,6 +6,9 @@
     - misp_testing_user_home: "/home/{{ misp_testing_user }}"
     - misp_testing_key_file: "{{ misp_testing_user_home }}/build/key.txt"
     - misp_base_url: http://localhost
+    - misp_webusers_list:
+        - { u: dupont@admin.test, p: dupont_passphrase. }
+        - { u: dupond@admin.test, p: dupond_passphrase. }
   roles:
     - { role: MISP, misp_testing: true }
 
