--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -2,11 +2,9 @@
 # debian wheezy: add backports
 # deb http://http.debian.net/debian wheezy-backports main
 
-- name: apt | MISP dependencies install
-  apt: name={{item}} state=present update_cache=yes cache_valid_time=3600
-  with_items:
+- set_fact:
+   pkg_list:
     - openssh-server
-    - apache2
     - mysql-server
     - php5
     - php5-mysql
@@ -24,7 +22,6 @@
     - libxslt1-dev
     - zlib1g-dev
     - php5-dev
-    - libapache2-mod-php5
 ## travis: "No package matching 'libapache2-mod-fastcgi' is available"
 #    - libapache2-mod-fastcgi
     - curl
@@ -36,6 +33,25 @@
 # misp-modules
     - python3
     - python3-pip
+
+- set_fact:
+    webserver:
+      - apache2
+      - libapache2-mod-php5
+    apache_svc: apache2
+  when: misp_webserver is not defined or misp_webserver == 'apache2'
+- set_fact:
+    webserver:
+      - nginx
+      - php5-fpm
+    apache_svc: nginx
+  when: misp_webserver is defined and misp_webserver == 'nginx'
+
+- name: apt | MISP dependencies install
+  apt: name={{item}} state=present update_cache=yes cache_valid_time=3600
+  with_items:
+    - "{{ pkg_list }}"
+    - "{{ webserver }}"
   async: 3600
   poll: 300
 
